Responsive layout adjustments for small and large screen

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div id="popup" class="fixed bottom-6 right-6 bg-white border p-3 rounded shadow hidden z-20"></div>
 
       <footer class="mt-8 text-sm text-gray-800">
-        Built with JavaScript & Tailwind • Data source: OpenWeatherMap
+        • Data source: OpenWeatherMap
       </footer>
     </main>
   </div>
