Final Commit of the Project

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
       <footer class="mt-8 text-sm text-gray-800">
         • Data source: OpenWeatherMap
+        <br>• Developed By: Gyanendra Singh
       </footer>
     </main>
   </div>
